comments/lista02_20241023203137.txt
g++ (Debian 12.2.0-14) 12.2.0
Copyright (C) 2022 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

ex4.cpp: In function ‘int main()’:
ex4.cpp:66:20: error: no matching function for call to ‘Polinomio2::Polinomio2(int)’
   66 |     Polinomio2 p1(1);
      |                    ^
ex4.cpp:27:5: note: candidate: ‘Polinomio2::Polinomio2()’
   27 |     Polinomio2()
      |     ^~~~~~~~~~
ex4.cpp:27:5: note:   candidate expects 0 arguments, 1 provided
ex4.cpp:12:5: note: candidate: ‘Polinomio2::Polinomio2(int, int, int)’
   12 |     Polinomio2(int a, int b, int c)
      |     ^~~~~~~~~~
ex4.cpp:12:5: note:   candidate expects 3 arguments, 1 provided
ex4.cpp:6:7: note: candidate: ‘constexpr Polinomio2::Polinomio2(const Polinomio2&)’
    6 | class Polinomio2
      |       ^~~~~~~~~~
ex4.cpp:6:7: note:   no known conversion for argument 1 from ‘int’ to ‘const Polinomio2&’
ex4.cpp:6:7: note: candidate: ‘constexpr Polinomio2::Polinomio2(Polinomio2&&)’
ex4.cpp:6:7: note:   no known conversion for argument 1 from ‘int’ to ‘Polinomio2&&’
ex4.cpp:71:22: error: no matching function for call to ‘Polinomio2::Polinomio2(int, int)’
   71 |     Polinomio2 p2(1,1);
      |                      ^
ex4.cpp:27:5: note: candidate: ‘Polinomio2::Polinomio2()’
   27 |     Polinomio2()
      |     ^~~~~~~~~~
ex4.cpp:27:5: note:   candidate expects 0 arguments, 2 provided
ex4.cpp:12:5: note: candidate: ‘Polinomio2::Polinomio2(int, int, int)’
   12 |     Polinomio2(int a, int b, int c)
      |     ^~~~~~~~~~
ex4.cpp:12:5: note:   candidate expects 3 arguments, 2 provided
ex4.cpp:6:7: note: candidate: ‘constexpr Polinomio2::Polinomio2(const Polinomio2&)’
    6 | class Polinomio2
      |       ^~~~~~~~~~
ex4.cpp:6:7: note:   candidate expects 1 argument, 2 provided
ex4.cpp:6:7: note: candidate: ‘constexpr Polinomio2::Polinomio2(Polinomio2&&)’
ex4.cpp:6:7: note:   candidate expects 1 argument, 2 provided
Versão do G++:
Varificando data de envio...
AGORA: 2024-10-23 17:32:29.632258-03:00
PRAZO MÁXIMO: 2024-11-06 23:59:59-03:06
Testando sua solucao...
Procurando exercício 1...
Exercício 1...
Compilando...
g++ -O2 -Wno-unused-result  "ex1.cpp" 
Teste 1: correto! +0.050
Teste 2: correto! +0.050
Teste 3: correto! +0.050
Teste 4: correto! +0.050
Teste 5: correto! +0.050
Teste 6: correto! +0.050
Teste 7: correto! +0.050
Teste 8: correto! +0.050
Teste 9: correto! +0.050
Teste 10: correto! +0.050
Teste 11: correto! +0.050
Teste 12: correto! +0.050
Teste 13: correto! +0.050
Teste 14: correto! +0.050
Teste 15: correto! +0.050
Teste 16: correto! +0.050
Teste 17: correto! +0.050
Teste 18: correto! +0.050
Teste 19: correto! +0.050
Teste 20: correto! +0.050
Nota exercicio 1: 1.0
Procurando exercício 2...
Exercício 2...
Compilando...
g++ -O2 -Wno-unused-result  "ex2.cpp" 
Teste 1: correto! +0.050
Teste 2: correto! +0.050
Teste 3: correto! +0.050
Teste 4: correto! +0.050
Teste 5: correto! +0.050
Teste 6: correto! +0.050
Teste 7: correto! +0.050
Teste 8: correto! +0.050
Teste 9: correto! +0.050
Teste 10: correto! +0.050
Teste 11: correto! +0.050
Teste 12: correto! +0.050
Teste 13: correto! +0.050
Teste 14: correto! +0.050
Teste 15: correto! +0.050
Teste 16: correto! +0.050
Teste 17: correto! +0.050
Teste 18: correto! +0.050
Teste 19: correto! +0.050
Teste 20: correto! +0.050
Nota exercicio 2: 1.0
Procurando exercício 3...
Exercício 3...
Compilando...
g++ -O2 -Wno-unused-result  "ex3.cpp" 
Teste 1: correto! +0.050
Teste 2: correto! +0.050
Teste 3: correto! +0.050
Teste 4: correto! +0.050
Teste 5: correto! +0.050
Teste 6: correto! +0.050
Teste 7: correto! +0.050
Teste 8: correto! +0.050
Teste 9: correto! +0.050
Teste 10: correto! +0.050
Teste 11: correto! +0.050
Teste 12: correto! +0.050
Teste 13: correto! +0.050
Teste 14: correto! +0.050
Teste 15: correto! +0.050
Teste 16: correto! +0.050
Teste 17: correto! +0.050
Teste 18: correto! +0.050
Teste 19: correto! +0.050
Teste 20: correto! +0.050
Nota exercicio 3: 1.0
Procurando exercício 4...
Exercício 4...
Compilando...
g++ -O2 -Wno-unused-result  "ex4.cpp" 
Teste 1 deu errado!
O resultado para
#include<iostream>
int main() {
    Polinomio2 p(1589, 8345, 1930);
    double *v = p.raizes();
    for(int i=0; i<=v[0]; i++) std::cout << v[i] << " " ;
    std::cout << p(2) << std::endl;
    return 0;
}
deveria ser
2.0 -5.009259610143957 -0.24247103806246262 24976
mas deu
2 -0.242471 -5.00926 5.06846e+06

Teste 2 deu errado! +0.017
O resultado para
#include<iostream>
int main() {
    double *v;
    Polinomio2 p1(1, 1, 1);
    v = p1.raizes();
    for(int i=0; i<=v[0]; i++) std::cout << v[i] << " ";
    std::cout << '\n' << p1(2) << '\n';
    Polinomio2 p2(1, 2, 1);
    v = p2.raizes(); for(int i=0; i<=v[0]; i++) std::cout << v[i] << " ";
    std::cout << '\n' << p2(2) << '\n';
    Polinomio2 p3(1, -3, 2);
    v = p3.raizes(); for(int i=0; i<=v[0]; i++) std::cout << v[i] << " ";
    std::cout << '\n' << p3(2) << '\n'; 
    return 0;
}

deveria ser
0.0
7
1.0 -1
9
2.0 1 2
0
mas deu
0 
5
1 -1 
7
2 2 1 
-2

Teste 3 deu errado!
O resultado para
#include<iostream>
int main() {
    Polinomio2 p(1095, 7866, 1448);
    double *v = p.raizes();
    for(int i=0; i<=v[0]; i++) std::cout << v[i] << " " ;
    std::cout << p(2) << std::endl;
    return 0;
}
deveria ser
2.0 -6.9945025330591735 -0.189059110776443 21560
mas deu
2 -0.189059 -6.9945 2.41523e+06

Teste 4 deu errado!
O resultado para
#include<iostream>
int main() {
    Polinomio2 p(324, 6578, -1510);
    double *v = p.raizes();
    for(int i=0; i<=v[0]; i++) std::cout << v[i] << " " ;
    std::cout << p(2) << std::endl;
    return 0;
}
deveria ser
2.0 -20.529483797887643 0.2270146620851729 12942
mas deu
2 0.227015 -20.5295 221598

Teste 5 deu errado!
O resultado para
#include<iostream>
int main() {
    Polinomio2 p(-1536, 8977, 836);
    double *v = p.raizes();
    for(int i=0; i<=v[0]; i++) std::cout << v[i] << " " ;
    std::cout << p(2) << std::endl;
    return 0;
}
deveria ser
2.0 5.936089489805472 -0.09168844813880501 12646
mas deu
2 -0.0916884 5.93609 4.73738e+06

Teste 6 deu errado!
O resultado para
#include<iostream>
int main() {
    Polinomio2 p(-1943, 2304, -469);
    double *v = p.raizes();
    for(int i=0; i<=v[0]; i++) std::cout << v[i] << " " ;
    std::cout << p(2) << std::endl;
    return 0;
}
deveria ser
2.0 0.9247834519288448 0.2610117101915876 -3633
mas deu
2 0.261012 0.924783 7.55464e+06

Teste 7 deu errado!
O resultado para
#include<iostream>
int main() {
    Polinomio2 p(-1224, 8583, -1866);
    double *v = p.raizes();
    for(int i=0; i<=v[0]; i++) std::cout << v[i] << " " ;
    std::cout << p(2) << std::endl;
    return 0;
}
deveria ser
2.0 6.787654519068767 0.22460038289201625 10404
mas deu
2 0.2246 6.78765 3.01165e+06

Teste 8 deu errado!
O resultado para
#include<iostream>
int main() {
    Polinomio2 p(-1842, 6429, -1401);
    double *v = p.raizes();
    for(int i=0; i<=v[0]; i++) std::cout << v[i] << " " ;
    std::cout << p(2) << std::endl;
    return 0;
}
deveria ser
2.0 3.2566815956470134 0.2335464173823027 4089
mas deu
2 0.233546 3.25668 6.79738e+06

Teste 9 deu errado!
O resultado para
#include<iostream>
int main() {
    Polinomio2 p(1094, 4185, 347);
    double *v = p.raizes();
    for(int i=0; i<=v[0]; i++) std::cout << v[i] << " " ;
    std::cout << p(2) << std::endl;
    return 0;
}
deveria ser
2.0 -3.740616585816632 -0.08479474873547048 13093
mas deu
2 -0.0847947 -3.74062 2.40239e+06

Teste 10: correto! +0.051
ERRO: Erro de Compilação
Nota exercicio 4: 0.0
Nota exercicio 4: 0.0
Procurando exercício 5...
Procurando exercício 6...
Procurando exercício 7...
Procurando exercício 8...
Nota total: 3.00
{"scores": {"ex1": 1.0, "ex2": 1.0, "ex3": 1.0, "ex4": 0.0, "ex5": 0.0, "ex6": 0.0, "ex7": 0.0, "ex8": 0.0}}
